--- a/README
+++ b/README
@@ -1,1 +1,15 @@
 Playing around with http://code.google.com/p/js-test-driver/
+
+
+To run these tests start a dev server like this:
+
+java -jar JsTestDriver-1.2.2.jar --port 4224 --browser `which firefox` &
+
+or this:
+
+java -jar JsTestDriver-1.2.2.jar --port 4224 --browser `which google-chrome` &
+
+
+and run the tests like this:
+
+java -jar JsTestDriver-1.2.2.jar --config config.cfg --tests all --reset --testOutput .
